# atomyst

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  atomyst.opam  atomyst.py  dune-project  install.sh  justfile  pyproject.toml  python.dylib
.beads/: issues.jsonl
.claude/: settings.json
.github/workflows/: publish.yml  release.yml
docs/plans/: 2026-02-02-binding-classification-architecture.atomized.md  2026-02-02-git-testing-infrastructure.atomized.md  auto-fix-imports.md  consumer-import-enhancements.md  issue-16-module-constants.md  release-automation.md
lib/: dune  extract.ml  extract.mli  git_utils.ml  git_utils.mli  lint.ml  lint.mli  prefix.ml  prefix.mli  python_parser.ml  python_parser.mli  render.ml  render.mli  rewrite.ml  rewrite.mli  snake_case.ml  snake_case.mli  types.ml
queries/: consumer_imports.scm  definitions.scm  imports.scm
scripts/: regenerate_fixtures.py
test/: TESTING.md  docstring_preservation_test.sh  fixture_test.sh  parity_test.sh  prefix_lint_test.sh  remove_original_test.sh  test_atomyst.py
test/fixtures/: README.md
test/fixtures/01_simple_class/: input.py  options
test/fixtures/01_simple_class/expected/: MANIFEST.yaml  __init__.py  person.py
test/fixtures/02_multiple_classes/: input.py
test/fixtures/02_multiple_classes/expected/: MANIFEST.yaml  __init__.py  circle.py  class_circle.py  class_point.py  class_rectangle.py  point.py  rectangle.py
test/fixtures/03_decorators/: input.py
test/fixtures/03_decorators/expected/: MANIFEST.yaml  __init__.py  _constants.py  class_priority.py  def_expensive_computation.py  expensive_computation.py  log_calls.py  priority.py
test/fixtures/04_comments/: input.py
test/fixtures/04_comments/expected/: MANIFEST.yaml  __init__.py  class_with_blank_line.py  no_comment.py  with_blank_line.py  with_comment.py
test/fixtures/05_name_conversion/: input.py
test/fixtures/05_name_conversion/expected/: MANIFEST.yaml  __init__.py  a.py  ab.py  abc_def.py  class_a.py  (+13 more)
test/fixtures/06_async_functions/: input.py
test/fixtures/07_type_checking/: input.py
test/fixtures/08_module_level_code/: input.py
test/fixtures/09_forward_references/: input.py
test/fixtures/10_incremental/: input.py
test/fixtures/11_docstring_pragmas/: input.py
test/fixtures/12_shebang/: input.py
test/fixtures/14_constants/: input.py
test/fixtures/15_constants_with_refs/: input.py
test/fixtures/17_prefix_kind/: input.py  options
test/fixtures/18_logger_binding/: input.py
test/fixtures/19_constants_sibling_import/: input.py
test/fixtures/20_definition_sibling_import/: input.py
test/ocaml/: dune  test_extract.ml  test_extract_imports.ml  test_extract_one.ml  test_git_utils.ml  test_lint.ml  test_prefix.ml  test_python_parser.ml  test_render.ml  test_rewrite.ml  test_snake_case.ml
test/tree_sitter_queries/: README.md  run_tests.sh
test/tree_sitter_queries/01_basic_definitions/: expected.txt  input.py
test/tree_sitter_queries/02_decorators/: expected.txt  input.py  query.scm
test/tree_sitter_queries/03_async/: expected.txt  input.py  query.scm
(+64 files in other folders)
