(test
 (name test_snake_case)
 (libraries atomyst alcotest))

(test
 (name test_extract)
 (libraries atomyst alcotest)
 (deps (source_tree ../../test/fixtures))
 (action (chdir %{project_root} (run %{test}))))

(test
 (name test_extract_imports)
 (libraries atomyst alcotest))

(test
 (name test_extract_one)
 (libraries atomyst alcotest)
 (deps (source_tree ../../test/fixtures))
 (action (chdir %{project_root} (run %{test}))))

(test
 (name test_render)
 (libraries atomyst alcotest str yojson))
