(test
 (name test_snake_case)
 (libraries atomyst alcotest))

(test
 (name test_extract)
 (libraries atomyst alcotest)
 (deps (source_tree ../../test/fixtures))
 (action (chdir %{project_root} (run %{test}))))

(test
 (name test_extract_imports)
 (libraries atomyst alcotest))

(test
 (name test_extract_one)
 (libraries atomyst alcotest)
 (deps (source_tree ../../test/fixtures))
 (action (chdir %{project_root} (run %{test}))))

(test
 (name test_render)
 (libraries atomyst alcotest str yojson))

(test
 (name test_rewrite)
 (libraries atomyst alcotest))

(test
 (name test_python_parser)
 (libraries atomyst alcotest))

(test
 (name test_git_utils)
 (libraries atomyst alcotest unix))

(test
 (name test_prefix)
 (libraries atomyst alcotest))

(test
 (name test_lint)
 (libraries atomyst alcotest))
